syntax = "proto3";

package hedera_721;

option java_package = "com.hedera.hashgraph.seven_twenty_one.proto";
option java_multiple_files = true;

// void setApprovalForAll(address operator, bool approved)
message SetApprovalForAllFunctionData {
  bytes operator = 1; // <Address>
  bool approved = 2;
}
